crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@292.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[null, 1, \"a\\b\", \"a\\\\b\", \"^a\\\\b$\"]', 'lax $[*] ? (@ like_regex \"^a\\\\B$\" flag \"q\")');"
---
SelectStmt@0..109
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..107
    FuncCall@7..107
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..60
        Sconst@24..60 "'[null, 1, \"a\\b\", \"a\\ ..."
      Ascii44@60..61 ","
      Whitespace@61..62 " "
      AConst@62..107
        Sconst@62..107 "'lax $[*] ? (@ like_r ..."
  Ascii41@107..108 ")"
  Ascii59@108..109 ";"

