crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@293.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[null, 1, \"a\\b\", \"a\\\\b\", \"^a\\\\b$\"]', 'lax $[*] ? (@ like_regex \"^a\\\\B$\" flag \"iq\")');"
---
SelectStmt@0..110
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..108
    FuncCall@7..108
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..60
        Sconst@24..60 "'[null, 1, \"a\\b\", \"a\\ ..."
      Ascii44@60..61 ","
      Whitespace@61..62 " "
      AConst@62..108
        Sconst@62..108 "'lax $[*] ? (@ like_r ..."
  Ascii41@108..109 ")"
  Ascii59@109..110 ";"

