crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@294.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[null, 1, \"a\\b\", \"a\\\\b\", \"^a\\\\b$\"]', 'lax $[*] ? (@ like_regex \"^a\\\\b$\" flag \"\")');"
---
SelectStmt@0..108
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..106
    FuncCall@7..106
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..60
        Sconst@24..60 "'[null, 1, \"a\\b\", \"a\\ ..."
      Ascii44@60..61 ","
      Whitespace@61..62 " "
      AConst@62..106
        Sconst@62..106 "'lax $[*] ? (@ like_r ..."
  Ascii41@106..107 ")"
  Ascii59@107..108 ";"

