crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@299.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[]', 'strict $.datetime()');"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..51
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'[]'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..51
        Sconst@30..51 "'strict $.datetime()'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

