crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": 12}' @? '$.a.b';"
---
SelectStmt@0..36
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..35
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..35
      TypeCast@13..24
        AConst@13..24
          Sconst@13..24 "'{\"a\": 12}'"
      Whitespace@24..25 " "
      Op@25..27 "@?"
      Whitespace@27..28 " "
      AConst@28..35
        Sconst@28..35 "'$.a.b'"
  Ascii59@35..36 ";"

