crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@300.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{}', '$.datetime()');"
---
SelectStmt@0..46
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'{}'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..44
        Sconst@30..44 "'$.datetime()'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

